--- a/src/main/resources/assets/elemental_battle/lang/en_us.json
+++ b/src/main/resources/assets/elemental_battle/lang/en_us.json
@@ -2,5 +2,7 @@
   "item.elemental_battle.frost_staff": "Frost Staff",
   "item.elemental_battle.flame_staff": "Flame Staff",
 
+  "entity.elemental_battle.icicle_ball": "Icicle Ball",
+
   "itemGroup.elemental_battle": "Elemental Battle"
 }
