--- a/src/main/resources/assets/elemental_battle/lang/en_us.json
+++ b/src/main/resources/assets/elemental_battle/lang/en_us.json
@@ -3,6 +3,7 @@
   "item.elemental_battle.flame_staff": "Flame Staff",
 
   "entity.elemental_battle.icicle_ball": "Icicle Ball",
+  "entity.elemental_battle.icicle": "Icicle",
 
   "itemGroup.elemental_battle": "Elemental Battle"
 }
