Improved magic shield entity by mixing into damage.

--- a/src/main/resources/assets/elemental_battle/lang/en_us.json
+++ b/src/main/resources/assets/elemental_battle/lang/en_us.json
@@ -4,6 +4,11 @@
 
   "entity.elemental_battle.icicle_ball": "Icicle Ball",
   "entity.elemental_battle.icicle": "Icicle",
+  "entity.elemental_battle.shattering_wall": "Shattering Wall",
+
+  "entity.elemental_battle.cone_of_fire": "Cone of Fire",
+
+  "effect.elemental_battle.shield": "Shield",
 
   "itemGroup.elemental_battle": "Elemental Battle",
 
