Continued work on gust.

--- a/src/main/resources/assets/elemental_battle/lang/en_us.json
+++ b/src/main/resources/assets/elemental_battle/lang/en_us.json
@@ -16,6 +16,8 @@
   "entity.elemental_battle.flaming_dash": "Flaming Dash",
   "entity.elemental_battle.flame_vortex": "Flame Vortex",
 
+  "entity.elemental_battle.gust": "Gust",
+
   "effect.elemental_battle.shield": "Shield",
   "effect.elemental_battle.successful_parry": "Successful Parry",
 
