Added air lift spell.

--- a/src/main/resources/assets/elemental_battle/lang/en_us.json
+++ b/src/main/resources/assets/elemental_battle/lang/en_us.json
@@ -17,6 +17,7 @@
   "entity.elemental_battle.flame_vortex": "Flame Vortex",
 
   "entity.elemental_battle.gust": "Gust",
+  "entity.elemental_battle.air_lift": "Air Lift",
 
   "effect.elemental_battle.shield": "Shield",
   "effect.elemental_battle.successful_parry": "Successful Parry",
